# Dijiang

./: CMakeLists.txt  imgui.ini  main.cpp
asset/: CMakeLists.txt  export.lua  lighting.asset  lua  main.level  main.level.1  main.level.2  main.level.3  quaternion.lua  terrain.level
asset/animation/robot/: run.anim
asset/importer/: Vector3.lua  import-clip.lua  import-level.lua  import-skeleton.lua  import-skin.lua  import.sh  math.lua
asset/importer/asset/level/: 1-1.level.json
asset/importer/asset/objects/character/player/components/animation/data/: main.lua
asset/importer/asset/objects/environment/_material/: gold.material.json
asset/lua/component/: house.lua  main.lua
asset/material/: gold.mat  line.mat  pbr.mat  robot.mat  shadowcaster.mat  silver.mat  skeletonshadowcaster.mat  skybox.mat  test.mat  white.mat
asset/models/: robot.skin
asset/shaders/: line.frag.spv  line.hlsl  line.shader  line.vert.spv  pbr.frag.spv  pbr.hlsl  pbr.vert.spv  shader.frag.spv  shader.hlsl  shader.shader  shader.vert.spv  shaderc.sh  shadowcaster.frag.spv  shadowcaster.hlsl  shadowcaster.shader  shadowcaster.vert.spv  skeleton.frag.spv  skeleton.hlsl  skeleton.vert.spv  skeletonshadowcaster.frag.spv  skeletonshadowcaster.hlsl  skeletonshadowcaster.vert.spv  skybox.frag.spv  skybox.hlsl  skybox.shader  skybox.vert.spv
asset/shaders/include/: engine_constant.inc.hlsl  engine_lighting.inc.hlsl  engine_skeleton.inc.hlsl  engine_variables.inc.hlsl
asset/skeleton/: avatar.skeleton
shaders/: shader.hlsl
src/: CMakeLists.txt  conf.h  engine.cpp  engine.h  gameobject.cpp  gameobject.h  level.cpp  level.h  luavm.cpp  luavm.h  main.cpp  screen.cpp  screen.h
src/animation/: animator.h  clip.h  skeleton.cpp  skeleton.h
src/components/: animator.cpp  animator.h  camera.cpp  camera.h  component.h  light.cpp  light.h  luacomponent.cpp  luacomponent.h  meshfilter.cpp  meshfilter.h  meshrender.cpp  meshrender.h  skinrender.cpp  skinrender.h
src/editor/: SCENEVIEW.H  editor.cpp  editor.h  gameview.cpp  gameview.h  hierarchy.cpp  hierarchy.h  inspector.h  main.cpp  menu.cpp  menu.h  scene_camera.cpp  scene_camera.h  scenecamera.h  sceneview.cpp  sceneview.h
src/framework/: gameobject.cpp  gameobject.h  level.cpp  level.h  trasform.h
src/framework/component/: component.h
src/framework/components/: camcontrol.h  camera.h  component.h  luacomponent.cpp  luacomponent.h  meshfilter.h
src/lualib/: CMakeLists.txt  lcomponent.cpp  lgameobject.cpp  linput.cpp  lmath.cpp
src/math/: .math.h.swo  .math.h.swp  math.h  rect.h  transform.h
src/render/: bone_weight.h  color.h  cubemap.h  debugger.cpp  debugger.h  draw_object.h  gpu.h  gpu_interface.cpp  gpu_interface.h  gpu_resource.h  graphics.h  input.h  lighting_asset.cpp  lighting_asset.h  material.h  mesh.h  painter.cpp  painter.h  platform.h  render.cpp  render.h  render_pass.h  render_texture.h  shader.cpp  shader.h  texture.cpp  texture.h  texture2d.h  texture_filter.h  texture_format.h  texture_wrap.h  ubo.h  vertex.h
src/render/vulkan/: .forward.cpp.swp  .vk_surface.cpp.swp  cmdbuf.cpp  cmdbuf.h  forward.cpp  forward.h  forwardbase.h  framesync.cpp  framesync.h  renderctx.cpp  renderctx.h  samplermgr.cpp  samplermgr.h  vk_bindless_set.h  vk_bindless_texture.cpp  vk_bindless_texture.h  vk_buffer.cpp  vk_buffer.h  vk_color_buffer.cpp  vk_color_buffer.h  vk_ctx.cpp  vk_ctx.h  vk_cubemap.cpp  vk_cubemap.h  vk_debugger.cpp  vk_debugger.h  vk_depth_buffer.cpp  vk_depth_buffer.h  vk_desc_write.h  vk_factory.cpp  vk_filter.h  vk_format.h  vk_forward_pass.cpp  vk_forward_pass.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_gpu.h  vk_gpu_mesh.cpp  vk_gpu_mesh.h  vk_graphics.cpp  (+33 more)
src/resource/: resource.cpp  resource.h
src/system/: render_system.cpp  render_system.h
src/utils/: delete_queue.h  file.cpp  file.h
tools/: shaderc.sh
